# SteelBar_CircuitPython_powerful_bldc_driver

./: .gitignore  LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  steelbar_powerful_bldc_driver.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: powerful_bldc_driver_simpletest.py
