# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Emily Trau for Steel Bar Robotics
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "steelbar-circuitpython-powerful-bldc-driver"
description = ""
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Steel Bar Robotics", email = "steelbarrobotics@gmail.com"}
]
urls = {Homepage = "https://github.com/SteelBarRobotics/SteelBar_CircuitPython_powerful_bldc_driver"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "powerful_bldc_driver",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["steelbar_powerful_bldc_driver"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
